# betterdiscord-emotereplacer

./: .eslintignore  .eslintrc.js  .gitignore  .prettierrc  EmoteReplacer.plugin.d.ts  EmoteReplacer.plugin.js  LICENSE  README.md  bundle.js  downscale.js  gif-utils.js  gifModifiers.json  gifsicle-stream.js  gifsicle.js  main.js  modifiers.json  package-lock.json  package.json  pica.js  rollup.config.js  test-gif-utils.js  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
rust/: Cargo.toml
rust/src/: command.rs  flip.rs  infinite.rs  lib.rs  rain.rs  rainbow.rs  resize.rs  rotate.rs  serde.rs  shake.rs  slide.rs  spin.rs  utils.rs  wiggle.rs
src/: banner.txt  index.ts  pluginConstants.ts  worker.ts
src/classes/: emoteReplacerPlugin.ts  rawPlugin.ts
src/interfaces/: attachment.ts  bdapi.ts  cached.ts  channel.ts  completion.ts  currentVersionInfo.ts  emoji.ts  extendedMeta.ts  gifData.ts  internalEmote.ts  listener.ts  message.ts  modifier.ts  pendingReply.ts  scrollOptions.ts  settings.ts  sticker.ts  upload.ts  user.ts  workerData.ts  zeresPluginLibrary.ts
src/libraries/: arch.ts  buffer-to-stream.ts  gifiscle.ts  jimp.js
src/modifiers/: infinite.ts  rain.ts  rainbow.ts  rotate.ts  shake.ts  slide.ts  spin.ts  wiggle.ts
src/patches/: changeDraft.ts  deletePendingReply.ts  emojiSearch.ts  lockedEmojis.ts  pendingReply.ts
src/services/: attachService.ts  baseService.ts  completionsService.ts  emoteService.ts  gifProcessingService.ts  gifsicleService.ts  htmlService.ts  listenersService.ts  (+4 more)
typings/: gifsicle-wasm-browser.d.ts  omggif.d.ts
(+38 files in other folders)
