[package]
name = "gif-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.5.0"
serde = "1.0.159"
image = "0.24.6"
imageproc = "0.23.0"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
colors-transform = "0.2.11"