[package]
name = "gif-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.5.0"
serde = { version = "1.0.159", features = ["derive"] }
image = { version = "0.24.6", default-features = false, features = ["gif", "png"] }
imageproc = { version = "0.23.0", default-features = false } # removes the "rayon" feature; might be useful in the future though
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
colors-transform = "0.2.11"